# satander_py_backend

./: .gitignore  README.md  pyproject.toml
santander_dio/POO/encapsulamento/: encapsulamento.md  encapsulamento.py  properties_pessoa.py  propriedades.py
santander_dio/POO/herança/: heranca.md  heranca_multipla.py  heranca_simples.py
santander_dio/POO/interfaces_e_classes_abstratas/: classe_abstrata.py  exemplo.py  interface_e_classes_abstratas.md  pessoa.py
santander_dio/POO/polimorfismo/: passaro.py  polimorfismo.md
