[project]
name = "santander-dio"
version = "0.1.0"
description = ""
authors = [
    {name = "davidade300",email = "iaderinho@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
